--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+Crowd Control/obj/
+Crowd Control/bin/
+.vs/
+
 # Prerequisites
 *.d
 
@@ -32,7 +36,3 @@
 *.app
 *.vsidx
 *.vsidx
-
-Crowd Control\obj\*
-Crowd Control\bin\*
-.vs\*
