--- a/Crowd Control/Crowd Control.csproj
+++ b/Crowd Control/Crowd Control.csproj
@@ -29,8 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="ChatHandler\Default.sm.config.json" />
-    <EmbeddedResource Include="ChatHandler\SaltySeraph.sm.config.json" />
+    <EmbeddedResource Include="LuaCommands\Default.sm.config.json" />
+    <EmbeddedResource Include="LuaCommands\SaltySeraph.sm.config.json" />
     <EmbeddedResource Include="LuaCommands\Default.lua" />
     <EmbeddedResource Include="LuaCommands\SaltySeraph.lua" />
   </ItemGroup>
